wp-content/plugins/candela-utility/themes/bombadil/style.css
/* ... */
.third-block ul li {
	margin-bottom: 0.6em;
}
.third-block-wrap a {
  color: #1d1d1d;
}
.third-block-wrap a:hover {
  color: #077fab;
}
.third-block-wrap h4 {
  font-size: 1.1em;
  margin-top: 1em;
  margin-bottom: 0.75em;
  text-transform: none;
  font-weight: 600 !important;
}
.third-block-wrap h4 a {
	font-weight: 600 !important;
}
.third-block-wrap ul {
  line-height: 1.3 !important;
}


/* ------------------------------------------------------------------------ *
 * STUDY PLAN PAGE
 * ------------------------------------------------------------------------ */

#study-guide-heading {
  height: 105px;
  position: relative;
}
#study-guide-heading-content {
  margin-top: 14px;
}
#study-guide-heading-content h1 {
  font-weight: 400;
  margin-bottom: 0 !important;
}
#why-it-matters,
#what-you-know,
#putting-it-together,
#quiz {
  height: 160px;
}
#why-it-matters, #putting-it-together {
  background-color: #007a7c;
}
#what-you-know {
  background-color: #eee;
}
#quiz {
  background-color: #077fab;
}
.content-image {
  float: left;
  height: 130px;
  width: 180px;
}
.content-image img {
  height: 100px;
  width: 100px;
  margin: 0 40px;
  padding: 0;
}
.content-description {
  position: relative;
  left: 30px;
  /*margin-left: 130px;*/
  line-height: 1.2em;
  /*width: 100%;
  max-width: 90%;*/
  padding-right: 50px;
}
#why-it-matters .content-description,
#quiz .content-description {
  color: #fff;
}
#why-it-matters .content-description a,
#quiz .content-description a {
  color: #fff;
}
.content-description-title {
  margin: 30px 0 10px 0;
  font-weight: 400;
  text-transform: capitalize;
  font-size: 1.5em;
  padding: 8px 0 4px 0;
}
.content-description-title a {
  text-transform: capitalize;
  font-weight: 400;
}
.content-description-title p {
  text-transform: none;
}
.content-description-long {
  font-size: 14px;
}
.chapters {
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  border-radius: 6px;
  background-color: #fff;
}
.chapter-content {
  min-height: 160px;
  margin: 30px 0 20px 0;
  line-height: 1.2em;
  position: relative;
}
.chapter-content .content-image {
  position: absolute;
  height: 100% !important;
  background: #eee;
  border-radius: 6px 0 0 6px;
  margin-left: 15px;
}
.chapter-content .content-image img {
  margin-top: 30px;
}
.chapter-content .content-image p {
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 0.1em;
  color: #D43900;
  font-size: 0.9em;
  text-align: center;
}
.chapter-content .content-description {
  position: relative;
  left: 210px;
}
.chapter-content .content-description-title {
  margin: 0;
  padding: 30px 0 10px 0;
  text-decoration: none;
  line-height: 1em;
}
.chapter-content .content-description-long p {
  font-size: 0.9em;
}
td a {
  font-weight: 400;
}
.license-attribution {
  display: none;
}


/* ------------------------------------------------------------------------ *
 * ToC, AUTHOR PAGE, BOOK PAGE
 * ------------------------------------------------------------------------ */

#inline-toc h4 {
	font-family: inherit;
	font-size: 1em;
	font-weight: bold;
	text-align: left;
	text-transform: none;
}
.page-title {
	font-weight: normal;
}


/* ------------------------------------------------------------------------ *
 * STRUCTURE
 * ------------------------------------------------------------------------ */

#content table.bcc-shrink tr th,
#content table.bcc-shrink tr td,
#content table.bcc-shrink thead th {
	padding-right: 4px;
	padding-left: 4px;
}
#sidebar {
	display: none;
}


/* ------------------------------------------------------------------------ *
 * NAVIGATION & HEADER
 * ------------------------------------------------------------------------ */

.nav-container {
	margin-bottom: 0;
}
nav {
	background: #077fab;
	position: relative;
  height: 105px;
	width: 100%;
	z-index: 100;
	box-shadow: none;
	-o-box-shadow: none;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
}
.header-nav {
	max-width: 940px;
	margin: 0 auto;
}
.pressbooks-logo {
	font-family: "proxima-nova", sans-serif;
	font-weight: 600;
	font-size: 1.6em;
	text-transform: none;
  color: #fff;
	padding: 0 0 0 34px;
	height: 70px;
	line-height: 70px;
	white-space: nowrap;
}
.book-title {
  font-size: 1.4em;
  font-weight: 400;
  color: #fff;
	text-align: left;
  text-decoration: none;
  text-transform: none;
	padding: 0 0 0 35px;
  /*margin: 50% auto;*/
  /*  DO NOT MOVE LAST 3 LINES - CENTERS BOOKTITLE TEXT  */
  height: 70px;
  line-height: 70px;
  white-space: nowrap;
}
.book-title:hover {
	color: #fff;
}
.sub-nav {
  margin: 0;
  max-height: 35px;
  background-color: #fafafa;
	padding: 4px;
	border-bottom: 1px #000 solid;
}
.center-subtext-search {
	max-width: 940px;
	margin: 0 auto;
}
.sub-nav-subtext {
  width: 40%;
  font-size: 14px;
  color: #6d6d6d;
  float: left;
	padding-left: 30px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.searchform {
  width: 220px;
  float: right;
}
.searchform #s {
  width: 150px;
  height: 24px;
  display: inline-block;
}
.searchform #searchsubmit {
  height: 24px;
  width: 50px;
  font-size: 0.7em;
  vertical-align: middle;
}


/* ------------------------------------------------------------------------ *
 * TITLE, SUBTITLE, AUTHORS & APHORISM
 * ------------------------------------------------------------------------ */

/*.entry-title {
	font-weight: normal;
	text-align: left;
	margin: 100px 0 80px;
	text-transform: none;
}*/
/*.entry-title span {
	border-bottom: 1px solid #333;
	padding: 0 0.2em 0.3em;
	text-align: center;
	width: 20%;
}*/
.chapter_subtitle {
	font-size: 1em;
	font-style: italic;
	font-weight: normal;
	margin: -80px 0 100px;
	line-height: 1.4em;
}
.chapter_author {
	font-family: "Crimson","Times New Roman", serif;
	font-style: italic;
	font-weight: normal;
	margin: -70px 0 100px;

}
.chapter_subtitle + .chapter_author {
	margin-top: -80px;
}
/* ... */

